can't get nuget package manager working on mac

--- a/razorbooklist/appsettings.json
+++ b/razorbooklist/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=sql_server_test;Database=YourDatabaseName; User Id=sa;password=reallyStrongPwd123; MultipleActiveResultSets=true"
+  }
 }
 
