successfully added database connection

--- a/razorbooklist/appsettings.json
+++ b/razorbooklist/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=sql_server_test;Database=YourDatabaseName; User Id=sa;password=reallyStrongPwd123; MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=127.0.0.1,1433;Database=sql_server_test;User Id=sa; Password=reallyStrongPwd123;"
   }
 }
 
